--- a/ToDoListHTML/shop.html
+++ b/ToDoListHTML/shop.html
@@ -24,7 +24,10 @@
                 </div>
             </div>
         </div>
+        <div class="shop-container">
+            <!-- Shop items will be dynamically inserted here -->
+        </div>
     </div>
     <script src="shop.js"></script>
-
 </body>
+</html>
