--- a/ToDoListHTML/garden.html
+++ b/ToDoListHTML/garden.html
@@ -51,7 +51,6 @@
 
 <body>
     <div class="wrapper">
-        <!-- Existing elements -->
         <div class="screen home-screen">
             <div class="head-wrapper">
                 <div class="back-btn">
@@ -89,14 +88,7 @@
                 <span class="close">&times;</span>
                 <h2>Choose Your Plant Series</h2>
                 <form id="series-form">
-                    <label>
-                        <input type="radio" name="series" value="basic1" checked>
-                        Basic 1 (Seed Series)
-                    </label>
-                    <label>
-                        <input type="radio" name="series" value="basic2">
-                        Basic 2 (Flower Series)
-                    </label>
+                    <!-- Options will be populated dynamically -->
                     <button type="submit">Submit</button>
                 </form>
             </div>
@@ -105,107 +97,133 @@
 
     <script src="main.js"></script>
     <script>
-       document.addEventListener("DOMContentLoaded", function() {
-    // Back button functionality
-    const backBtn = document.querySelector(".back-btn");
-    backBtn.addEventListener("click", function() {
-        window.location.href = "main.html"; // Replace with your main.html file path
-    });
+        document.addEventListener("DOMContentLoaded", function() {
+            // Back button functionality
+            const backBtn = document.querySelector(".back-btn");
+            backBtn.addEventListener("click", function() {
+                window.location.href = "main.html"; // Replace with your main.html file path
+            });
 
-    // View plants button functionality
-    const viewPlantsButton = document.getElementById("view-plants-button");
-    viewPlantsButton.addEventListener("click", function() {
-        window.location.href = "plants.html"; // Replace with your plants.html file path
-    });
+            // View plants button functionality
+            const viewPlantsButton = document.getElementById("view-plants-button");
+            viewPlantsButton.addEventListener("click", function() {
+                window.location.href = "plants.html"; // Replace with your plants.html file path
+            });
 
-    // Dark mode toggle functionality
-    var mode = document.getElementById("mode");
-    mode.onclick = function () {
-        document.body.classList.toggle("dark-theme");
-        mode.src = document.body.classList.contains("dark-theme") ? "icons/sun.PNG" : "icons/moon.PNG";
-    }
-
-    // Plant images based on series
-    var plantImages = {
-        basic1: ["icons/l1seed.PNG", "icons/l2seed.PNG", "icons/l3seed.PNG", "icons/l4seed.PNG", "icons/l5seed.PNG", "icons/l6seed.PNG"],
-        basic2: ["icons/l1flower.PNG", "icons/l2flower.PNG", "icons/l3flower.PNG", "icons/l4flower.PNG", "icons/l5flower.PNG", "icons/l6flower.PNG"]
-    };
-
-    // Initialize variables from localStorage
-    var currentSeries = localStorage.getItem("currentSeries") || "basic1";
-    var plantImage = document.getElementById("plant-image");
-    var waterButton = document.getElementById("water-button");
-    var scoreSpan = document.querySelector(".score");
-    var plantsGrownSpan = document.querySelector(".plants-grown");
-    var seriesSelectionModal = document.getElementById("series-selection-modal");
-    var seriesForm = document.getElementById("series-form");
-    var closeModal = document.querySelector(".close");
-
-    var score = parseInt(localStorage.getItem("waterDroplets")) || 0;
-    var grownPlants = JSON.parse(localStorage.getItem("grownPlants")) || [];
-    var currentImageIndex = parseInt(localStorage.getItem("currentImageIndex")) || 0;
-
-    // Set score and grown plants count
-    scoreSpan.textContent = score;
-    plantsGrownSpan.textContent = grownPlants.length;
-
-    // Set the initial plant image
-    if (plantImages[currentSeries] && plantImages[currentSeries][currentImageIndex]) {
-        plantImage.src = plantImages[currentSeries][currentImageIndex];
-    } else {
-        console.error("Image not found for the current series and index.");
-    }
-
-    // Water button functionality
-    waterButton.addEventListener("click", function () {
-        if (score > 0) {
-            score--;
-            localStorage.setItem("waterDroplets", score);
-            scoreSpan.textContent = score;
-
-            if (plantImage.src.endsWith(plantImages[currentSeries][plantImages[currentSeries].length - 1])) {
-                grownPlants.push(plantImages[currentSeries][currentImageIndex]);
-                localStorage.setItem("grownPlants", JSON.stringify(grownPlants));
-                plantsGrownSpan.textContent = grownPlants.length;
-
-                seriesSelectionModal.style.display = 'block';
-            } else {
-                currentImageIndex = (currentImageIndex + 1) % plantImages[currentSeries].length;
-                localStorage.setItem("currentImageIndex", currentImageIndex);
-                plantImage.src = plantImages[currentSeries][currentImageIndex];
+            // Dark mode toggle functionality
+            var mode = document.getElementById("mode");
+            mode.onclick = function () {
+                document.body.classList.toggle("dark-theme");
+                mode.src = document.body.classList.contains("dark-theme") ? "icons/sun.PNG" : "icons/moon.PNG";
             }
-        } else {
-            alert("No more water droplets left!");
-        }
-    });
 
-    // Series selection form submission
-    seriesForm.addEventListener("submit", function (e) {
-        e.preventDefault();
-        var selectedSeries = document.querySelector('input[name="series"]:checked').value;
-        if (selectedSeries) {
-            currentSeries = selectedSeries;
-            currentImageIndex = 0;
-            localStorage.setItem("currentSeries", currentSeries);
-            localStorage.setItem("currentImageIndex", currentImageIndex);
-            plantImage.src = plantImages[currentSeries][currentImageIndex];
+            // Plant images based on series
+            var plantImages = {
+                basic1: ["icons/l1seed.PNG", "icons/l2seed.PNG", "icons/l3seed.PNG", "icons/l4seed.PNG", "icons/l5seed.PNG", "icons/l6seed.PNG"],
+                basic2: ["icons/l1flower.PNG", "icons/l2flower.PNG", "icons/l3flower.PNG", "icons/l4flower.PNG", "icons/l5flower.PNG", "icons/l6flower.PNG"]
+            };
 
-            seriesSelectionModal.style.display = 'none';
-        }
-    });
+            // Initialize variables from localStorage
+            var currentSeries = localStorage.getItem("currentSeries") || "basic1";
+            var plantImage = document.getElementById("plant-image");
+            var waterButton = document.getElementById("water-button");
+            var scoreSpan = document.querySelector(".score");
+            var plantsGrownSpan = document.querySelector(".plants-grown");
+            var seriesSelectionModal = document.getElementById("series-selection-modal");
+            var seriesForm = document.getElementById("series-form");
+            var closeModal = document.querySelector(".close");
 
-    // Close modal functionality
-    closeModal.addEventListener("click", function() {
-        seriesSelectionModal.style.display = 'none';
-    });
+            var score = parseInt(localStorage.getItem("waterDroplets")) || 0;
+            var grownPlants = JSON.parse(localStorage.getItem("grownPlants")) || [];
+            var currentImageIndex = parseInt(localStorage.getItem("currentImageIndex")) || 0;
 
-    // Load data on page load
-    window.addEventListener("load", function () {
-        scoreSpan.textContent = score;
-        plantsGrownSpan.textContent = grownPlants.length;
-    });
-});
+            // Set score and grown plants count
+            scoreSpan.textContent = score;
+            plantsGrownSpan.textContent = grownPlants.length;
 
+            // Set the initial plant image
+            if (plantImages[currentSeries] && plantImages[currentSeries][currentImageIndex]) {
+                plantImage.src = plantImages[currentSeries][currentImageIndex];
+            } else {
+                console.error("Image not found for the current series and index.");
+            }
+
+            // Populate the series selection modal
+            var unlockedSeries = JSON.parse(localStorage.getItem("unlockedSeries")) || [];
+            var seriesForm = document.getElementById("series-form");
+            var seriesOptions = Object.keys(plantImages);
+
+            seriesOptions.forEach(function(series) {
+                if (unlockedSeries.includes(series) || series === "basic1") {
+                    var label = document.createElement("label");
+                    var input = document.createElement("input");
+                    input.type = "radio";
+                    input.name = "series";
+                    input.value = series;
+                    input.checked = series === currentSeries;
+                    label.appendChild(input);
+                    label.appendChild(document.createTextNode(` ${series === "basic1" ? "Basic 1 (Seed Series)" : "Basic 2 (Flower Series)"}`));
+                    seriesForm.insertBefore(label, seriesForm.querySelector("button"));
+                    seriesForm.appendChild(document.createElement("br"));
+                }
+            });
+
+            // Water button functionality
+            waterButton.addEventListener("click", function () {
+                if (score > 0) {
+                    score--;
+                    localStorage.setItem("waterDroplets", score);
+                    scoreSpan.textContent = score;
+
+                    if (plantImage.src.endsWith(plantImages[currentSeries][plantImages[currentSeries].length - 1])) {
+                        grownPlants.push(plantImages[currentSeries][currentImageIndex]);
+                        localStorage.setItem("grownPlants", JSON.stringify(grownPlants));
+                        plantsGrownSpan.textContent = grownPlants.length;
+
+                        seriesSelectionModal.style.display = 'block';
+                    } else {
+                        currentImageIndex = (currentImageIndex + 1) % plantImages[currentSeries].length;
+                        localStorage.setItem("currentImageIndex", currentImageIndex);
+                        plantImage.src = plantImages[currentSeries][currentImageIndex];
+                    }
+                } else {
+                    alert("No more water droplets left!");
+                }
+            });
+
+            // Series selection form submission
+            seriesForm.addEventListener("submit", function (e) {
+                e.preventDefault();
+                var selectedSeries = document.querySelector('input[name="series"]:checked').value;
+                if (selectedSeries) {
+                    currentSeries = selectedSeries;
+                    currentImageIndex = 0;
+                    localStorage.setItem("currentSeries", currentSeries);
+                    localStorage.setItem("currentImageIndex", currentImageIndex);
+                    plantImage.src = plantImages[currentSeries][currentImageIndex];
+
+                    seriesSelectionModal.style.display = 'none';
+
+                    // Update the unlocked series
+                    let unlockedSeries = JSON.parse(localStorage.getItem("unlockedSeries")) || [];
+                    if (!unlockedSeries.includes(selectedSeries)) {
+                        unlockedSeries.push(selectedSeries);
+                        localStorage.setItem("unlockedSeries", JSON.stringify(unlockedSeries));
+                    }
+                }
+            });
+
+            // Close modal functionality
+            closeModal.addEventListener("click", function() {
+                seriesSelectionModal.style.display = 'none';
+            });
+
+            // Load data on page load
+            window.addEventListener("load", function () {
+                scoreSpan.textContent = score;
+                plantsGrownSpan.textContent = grownPlants.length;
+            });
+        });
     </script>
 </body>
 
