--- a/ToDoListHTML/garden.html
+++ b/ToDoListHTML/garden.html
@@ -62,7 +62,7 @@
             <div class="welcome">
                 <div class="content">
                     <img src="icons/moon.PNG" id="mode">
-                    <h1>Hello orbitalms2</h1>
+                    <h1>Hello Orbital!</h1>
                     <h4>Welcome to your garden!</h4>
                 </div>
                 <div class="img">
