--- a/ToDoListHTML/main.html
+++ b/ToDoListHTML/main.html
@@ -40,7 +40,7 @@
                 <div class="welcome">
                     <div class="content">
                         <img src="icons/moon.PNG" id="mode">
-                        <h1>Hello orbitalms2</h1>
+                        <h1>Hello Orbital!</h1>
                         <p>Today you have <span class="totalTasks">0</span> tasks</p>
                     </div>
                     <div class="img">
