--- a/ToDoListHTML/shop.html
+++ b/ToDoListHTML/shop.html
@@ -16,6 +16,10 @@
                         <path stroke-linecap="round" stroke-linejoin="round" d="M6.75 15.75L3 12m0 0l3.75-3.75M3 12h18" />
                     </svg>
                 </div>
+                <!-- Water droplet count display -->
+                <div class="water-droplet-count">
+                    Water Droplets💧: <span id="droplet-count">0</span>
+                </div>
             </div>
             <div class="welcome">
                 <div class="content">
