--- a/ToDoListHTML/shop.html
+++ b/ToDoListHTML/shop.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="shop.css">
     <title>Leafy's Shop</title>
 </head>
+
 <body>
     <div class="wrapper">
         <div class="screen-backdrop"></div>
@@ -31,7 +33,12 @@
         <div class="shop-container">
             <!-- Shop items will be dynamically inserted here -->
         </div>
+        <!-- Reset button -->
+        <div class="reset-container">
+            <!--<button id="reset-unlocked-series-button">Reset Unlocked Series</button> -->
+        </div>
     </div>
     <script src="shop.js"></script>
 </body>
+
 </html>
