bug fix + PNG name change

--- a/ToDoListHTML/garden.html
+++ b/ToDoListHTML/garden.html
@@ -117,7 +117,7 @@
                 mode.src = document.body.classList.contains("dark-theme") ? "icons/sun.PNG" : "icons/moon.PNG";
             }
 
-            // Plant images based on series
+            // Plant images based on series fix PNG
             var plantImages = {
                 basic1: ["icons/l1seed.PNG", "icons/l2seed.PNG", "icons/l3seed.PNG", "icons/l4seed.PNG", "icons/l5seed.PNG", "icons/l6seed.PNG"],
                 basic2: ["icons/l1flower.PNG", "icons/l2flower.PNG", "icons/l3flower.PNG", "icons/l4flower.PNG", "icons/l5flower.PNG", "icons/l6flower.PNG"]
