png name change bug fix

--- a/ToDoListHTML/garden.html
+++ b/ToDoListHTML/garden.html
@@ -119,8 +119,33 @@
 
             // Plant images based on series fix PNG
             var plantImages = {
-                basic1: ["icons/l1seed.PNG", "icons/l2seed.PNG", "icons/l3seed.PNG", "icons/l4seed.PNG", "icons/l5seed.PNG", "icons/l6seed.PNG"],
-                basic2: ["icons/l1flower.PNG", "icons/l2flower.PNG", "icons/l3flower.PNG", "icons/l4flower.PNG", "icons/l5flower.PNG", "icons/l6flower.PNG"]
+                basic1: ["icons/l1seed.png", "icons/l2seed.png", "icons/l3seed.png", "icons/l4seed.png", "icons/l5seed.png", "icons/l6seed.png"],
+                basic2: ["icons/l1flower.png", "icons/l2flower.png", "icons/l3flower.png", "icons/l4flower.png", "icons/l5flower.png", "icons/l6flower.png"],
+                basic3: [
+        "icons/l1lily.PNG", 
+        "icons/l2lily.PNG", 
+        "icons/l3lily.PNG", 
+        "icons/l4lily.PNG", 
+        "icons/l5lily.PNG", 
+        "icons/l6lily.PNG"
+    ],
+    basic4: [
+        "icons/l1rose.PNG", 
+        "icons/l2rose.PNG", 
+        "icons/l3rose.PNG", 
+        "icons/l4rose.PNG", 
+        "icons/l5rose.PNG", 
+        "icons/l6rose.PNG"
+    ],
+    basic5: [
+        "icons/l1sunflower.PNG", 
+        "icons/l2sunflower.PNG", 
+        "icons/l3sunflower.PNG", 
+        "icons/l4sunflower.PNG", 
+        "icons/l5sunflower.PNG", 
+        "icons/l6sunflower.PNG"
+    ]
+
             };
 
             // Initialize variables from localStorage
